public/stylesheets/style.css
body {
  font-family: 'Apparel Light It';
  background-color:aliceblue;
}

h3 {
  padding-left: 1rem;
  padding-top: 1rem;
}

.thumbnail img {
  max-width: 200px;
}

.thumbnail .description {
  color: #7f7f7f;
}

.price {
  font-weight: bold;
  font-size: 16px;
}

.card  {
  text-decoration: none;
  color:#7f7f7f;
}

.nav a {
  text-decoration: none;
}

.navbar {
  border-bottom: 1px solid lightgrey;
  height: 150px;
}

.logoHeader {
  text-decoration: none;
  font-size: xx-large;
  font-weight:500;
}

.row {
  padding-bottom: 1rem;
  color:
}




.heroText {
  top:4em;
  left:5em;
  position: absolute;
  color: whitesmoke;
}

.heroScreen{
  margin: -0px;
  padding: 0;
  position:relative;
  font-size: xx-large;
}

.heroScreen p{
  font-size: xx-large;
  font-style: italic;
  font-size: 95%;
  width: 23em;
}

.heroScreen h3 {
  font-size: 120%;
}

.heroScreen btn {
  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
}



.navbar-brand {
  font-size: 160%;
  padding-right: 2rem;
  font-family: 'Apparel Display Bold It';
}

